--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>University of Lucknow</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - Present</h6>
-          <p>Bachelor Degree - BCA</p>
+          <h5 class="w3-opacity"><b>Chandigarh University</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2022 - Present</h6>
+          <p>BCA - Bachelor Of Computer Applications</p>
           <hr>
         </div>
         <div class="w3-container">
