--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="20210803_092342.jpg" style="width:100%"  alt="Avatar">
+          <img src="IMG_20220511_084936.jpg" style="width:100%"  alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Shivam Singh Kushwaha</h2>
           </div>
