update contact info

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <a class="fa fa-pinterest-p w3-hover-opacity" href="https://in.pinterest.com/ssk7860345351/_saved/" target="_blank"></a>
   <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/Shivamsingh52" target="_blank"></a>
   <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/shivam-singh-kushwaha-72323a215/" target="_blank"></a>
- <p class="w3-small">This website was made by Shivam . Make your own free website today!</p>
+ <p class="w3-small">This website was made by Shivam . Contact for website development and other services.</p>
  <a class="w3-button w3-round-xxlarge w3-small w3-light-grey w3-margin-bottom" href="https://wa.link/39o0tc" target="_blank">Dm me</a> <!-- End footer -->
  </footer>
 
