Added Bootstrap Website Project

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
               href="https://shivamsk-creator.github.io/microsoft-clone/" target="_blank">View</a>
             <hr>
           </div>
+
+
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Business Website</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dec 2022</span></h6>
+            <p>A Business Website using HTML, CSS and Bootstrap</p>
+            <a class="fa  w3-hover-opacity w3-text-teal w3-large text-decoration"
+              href="https://shivamsk-creator.github.io/bootstrap-company-website/" target="_blank">View</a>
+            <hr>
+          </div>
         </div>
 
         <div class="w3-container w3-card w3-white">
